tests/syntax-errors/simple_error.arl
archetype simple_error

entry funerror () {
  effect {
    f(); transition; g()
  }
}
